Bug 1132825: Don't evict partial segments. r=cajbir

Evicting a partial segment can leave the entire sourcebuffer in unplayable
state.